@@ -1,4 +1,14 @@
 <?php
+/**
+* Smarty Internal Plugin Templateparser Parsetrees
+*
+* These are classes to build parsetrees in the template parser
+*
+* @package Smarty
+* @subpackage Compiler
+* @author Thue Kristensen
+* @author Uwe Tews
+*/
 
 abstract class _smarty_parsetree {
   abstract public function to_smarty_php();
